--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
-				<li class="navbar-item">
-					<a href="#home" class="nav-link active">Home</a>
-				</li>
-				<li class="navbar-item">
+				<li class="nav-item">
+					<a href="#home" class="nav-link">Home</a>
+				</li>	
+				<li class="nav-item">
 					<a href="#course" class="nav-link">Course</a>
 				</li>
-				<li class="navbar-item">
+				<li class="nav-item">
 					<a href="#features" class="nav-link">features</a>
 				</li>
-				<li class="navbar-item">
+				<li class="nav-item">
 					<a href="#resources" class="nav-link">Resources</a>
 				</li>
-				<li class="navbar-item">
+				<li class="nav-item">
 					<a href="#client" class="nav-link">client</a>
 				</li>
-				<li class="navbar-item">
+				<li class="nav-item">
 					<a href="#contact" class="nav-link">Contact</a>
 				</li>
 				
