End features and resources html section

--- a/index.html
+++ b/index.html
@@ -77,11 +77,79 @@
 <!--- End Course Section -->
 <!-- start features section -->
 <div id="features" class="offset">
+	<!-- start jumbotron -->
+	<div class="jumbotron">
+		<div class="narrow text-center">
+			<div class="col-12">
+				<h3 class="heading">Features</h3>
+				<div class="heading-underline"></div>
+			</div>
+			<div class="row text-center">
+				<div class="col-md-4">
+					<div class="feature">
+						<i class="fas fa-play-circle fa-4x" data-fa-transform="shrink-3 up-5"></i>
+						<h3>Custom Animation</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, repudiandae!</p>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="feature">
+						<i class="fas fa-sliders-h fa-4x" data-fa-transform="shrink-4.5 up-4.5"></i>
+						<h3>Content Slider</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, repudiandae!</p>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="feature">
+						<i class="fab fa-wpforms fa-4x" data-fa-transform="shrink-4 up-5"></i>
+						<h3>Contact Form</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, repudiandae!</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end jumbotro -->
 
 </div>
 <!-- End features section  -->
 <!-- start resources section -->
 <div id="resources" class="offset">
+	<div class="fixed-background">
+		<div class="row dark text-center">
+			<div class="col-12">
+				<h3 class="heading">Built with care</h3>
+				<div class="heading-underline"></div>
+			</div>
+			<div class="col-md-4">
+				<h3>HTML 5</h3>
+				<div class="feature">
+					<i class="fas fa-code fa-3x"></i>
+				</div>
+				<p class="lead">Built with latest, HTML 5</p>
+			</div>
+			<div class="col-md-4">
+				<h3>BOOTSTRAP 4</h3>
+				<div class="feature">
+					<i class="fas fa-bold fa-3x"></i>
+				</div>
+				<p class="lead">Built with latest, Bootstrap 4</p>
+			</div>
+			<div class="col-md-4">
+				<h3>CSS 3</h3>
+				<div class="feature">
+					<i class="fab fa-css3 fa-3x"></i>
+				</div>
+				<p class="lead">Built with latest, Css3</p>
+			</div>
+
+		</div>
+		<div class="fixed-wrap">
+			<div class="fixed">
+
+			</div>
+		</div>
+	</div>
 
 </div>
 <!-- End resources section  -->
