completed html part

--- a/index.html
+++ b/index.html
@@ -155,11 +155,77 @@
 <!-- End resources section  -->
 <!-- start client section -->
 <div id="client" class="offset">
+	<div class="jumbotron">
+		<div class="col-12 text-center">
+			<h3 class="heading">Clients</h3>
+			<div class="heading-underline"></div>
+		</div>
+		 <div class="row">
+			 <div class="col-md-6 clients">
+				 <div class="row">
+					 <div class="col-md-4">
+						 <img src="img/client1.png" alt="">
+
+					 </div>
+					 <div class="col-md-8">
+						 <blockquote>
+							 <i class="fas fa-quote-left"></i>
+							 I see Tanjil support as more of a primary to my company
+							 than a resource. I can pick up the phone and talk to 
+							 anyone at any time and the way they interact with
+							 us a business makes it really simple.
+							 <cite>&#8212; Eric, Small Business Owner</cite>
+						 </blockquote>
+
+					 </div>
+				 </div>
+			 </div>
+			 <div class="col-md-6 clients">
+				<div class="row">
+					<div class="col-md-4">
+						<img src="img/client2.png" alt="">
+
+					</div>
+					<div class="col-md-8">
+						<blockquote>
+							<i class="fas fa-quote-left"></i>
+							I see Tanjil support as more of a primary to my company
+							than a resource. I can pick up the phone and talk to 
+							anyone at any time and the way they interact with
+							us a business makes it really simple.
+							<cite>&#8212; Rachel, Professional Photographer</cite>
+						</blockquote>
+
+					</div>
+				</div>
+			</div>
+		 </div>
+	</div>
+	<div class="col-12 narrow text-center">
+		<p class="lead"> want to learn more about developing Bootstrap themes?</p>
+		<a class="btn btn-secondary btn-md" href="http://bit.ly/advanced-bootstrap-course" target="_blank">Bootstrap Course</a>
+	</div>
 
 </div>
 <!-- End client section  -->
 <!-- start contact section -->
 <div id="contact" class="offset">
+	<footer>
+		<div class="row justify-content-center">
+			<div class="col-md-5 text-center">
+				<img src="img/logo.png" alt="">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia voluptas quae unde aspernatur beatae facilis!</p>
+				<strong>Contact Info</strong>
+				<p>(888) 888-8888 <br> taaanjil@gmail.com</p>
+				<a href="http://facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+				<a href="http://twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
+				<a href="http://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+
+			</div>
+			<hr class="socket">
+			&copy; Tanjil's territory
+		</div>
+	</footer>
 
 </div>
 <!-- End contact section  -->
