--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 <div id="course" class="offset">
 
 <div class="col-12 narrow text-center">
-	<h1>Tanjil Theme Advanced Bootstrap Course</h1>
+	<h1>Bootstrap Course</h1>
 	<p class="lead">Learn Bootstrap by creating an advanced Bootstrap 4 Responsive Website Template from scratch, with no steps skipped!</p>
-	<a class="btn btn-secondary btn-md" href="https://w3newbie.com/courses" target="_blank">Tanjil Theme Course Coupon</a>
+	<a class="btn btn-secondary btn-md" href="https://w3newbie.com/courses" target="_blank">Bootstrap Course</a>
 	
 </div>
 
@@ -174,6 +174,7 @@
 							 than a resource. I can pick up the phone and talk to 
 							 anyone at any time and the way they interact with
 							 us a business makes it really simple.
+							 <hr class="clients-hr">
 							 <cite>&#8212; Eric, Small Business Owner</cite>
 						 </blockquote>
 
@@ -193,6 +194,7 @@
 							than a resource. I can pick up the phone and talk to 
 							anyone at any time and the way they interact with
 							us a business makes it really simple.
+							<hr class="clients-hr">
 							<cite>&#8212; Rachel, Professional Photographer</cite>
 						</blockquote>
 
